[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/Objects/Traps/Laser.gd" type="Script" id=1]
[ext_resource path="res://assets/particules/glowing_circle.png" type="Texture" id=2]
[ext_resource path="res://src/Combat/DamageSource/DamageSourceTraps.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Combat/DamageSource/DamageSourcePassThrough.gd" type="Script" id=4]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.0101266, 0.812658, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.510158, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 25.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 2 )
color_ramp = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 40.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 2 )
color_ramp = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 10.0

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 5, 2 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 5, 1 )

[node name="Laser" type="RayCast2D"]
cast_to = Vector2( 480, 0 )
collision_mask = 2
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="Beam" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 100, 0 )
width = 2.0
default_color = Color( 0.470588, 0.698039, 0.996078, 1 )

[node name="CastingParticle" type="Particles2D" parent="."]
amount = 4
lifetime = 0.3
visibility_rect = Rect2( -1, -1, 2, 20 )
process_material = SubResource( 3 )
texture = ExtResource( 2 )

[node name="CastingParticle2" type="Particles2D" parent="."]
amount = 4
lifetime = 0.3
visibility_rect = Rect2( -1, -1, 2, 20 )
process_material = SubResource( 6 )
texture = ExtResource( 2 )

[node name="BeamParticle" type="Particles2D" parent="."]
amount = 18
visibility_rect = Rect2( -1, -1, 2, 20 )
local_coords = false
process_material = SubResource( 7 )

[node name="DamageSource" parent="." instance=ExtResource( 3 )]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageSource"]
shape = SubResource( 9 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 10 )
